--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
-body {
+/* body {
 	background-image: radial-gradient(circle, #ffffff, #ffffff, #d1d1d1, #ffffff, #ffffff);
-}
+} */
 
 .header-text {
     /* slide in animation */
@@ -11,8 +11,8 @@ body {
     overflow: hidden;
     animation: typing 3s, cursor .4s step-end infinite alternate;
     margin: 0 auto;
-	margin-left: 10%;
-	margin-right: 10%;
+	/* margin-left: 10%;
+	margin-right: 10%; */
     /* 3d effect css.*/
 		text-transform: uppercase;
 		font-size: 130px;
